--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,49 +1,98 @@
 @use "~bootstrap/scss/bootstrap.scss";
 
-//$bg-color: #181a1b;
-//overrides
+$filter-color: #004daa;
+$text-color: #e8e6e3;
 
-$lineSize: 5rem;
+$text-color-dark: rgba($text-color, 0.9);
+
+$primary-color: #181a1b;
+$secondary-color: rgba(white, 0.025);
+
+$background-gradient: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 1));
+
+$background-color: rgba($primary-color, 0.95);
+$secondary-background-color: rgba($secondary-color, 0.05);
+$secondary-background-color-light: rgba($secondary-color, 0.075);
+
+$border-color-light: rgba(white, 0.2);
+$border-color-dark: rgba(white, 0.075);
+
+$border-light: 1px solid $border-color-light;
+$border-dark: 1px solid $border-color-dark;
+
+$header-font-color: rgba($text-color, 0.75);
+
+%header-text {
+  font-size: 1.25rem;
+  letter-spacing: 1.5px;
+  color: $header-font-color;
+}
+
+%border-style-light {
+  border-color: $border-color-light;
+  border-radius: 0.375rem;
+}
+
+%border-style {
+  border-radius: 0.375rem;
+}
+
+%dark-filter {
+  background: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15));
+}
+
+//      ==============
+//*     === Common ===
+//      ==============
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  color: $text-color;
+  letter-spacing: 0.5px;
+  min-height: 100%;
+  background: $background-gradient;
+}
+
+header {
+  @extend %header-text;
+  height: 100%;
+  grid-column: 1 / 5;
+  border-bottom: $border-dark;
+}
 
 img {
   max-width: 100%;
+  height: inherit;
 }
+
+%max-size {
+  height: 100%;
+  width: 100%;
+}
+
+//      ==================
+//*     === Containers ===
+//      ==================
 
 .app {
-  height: 100vh;
-  position: absolute;
-  width: 100vw;
-}
-
-.spacer {
-  margin-top: 40vh;
-}
-
-.grid-half {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  // grid-template-rows: 50%;
-  &__content {
-  }
+  @extend %max-size;
+  position: fixed;
+  background-color: $background-color;
 }
 
 .content {
-  height: 100%;
-  width: 100%;
+  @extend %max-size;
   display: grid;
   gap: 1.5rem;
-  grid-template-rows: repeat(2, 1fr);
-  // grid-template-columns: 5% 45% 45% 5%;
-  grid-template-rows: 50% 50%;
-}
-
-.flex-container-centered {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  grid-column: 2/4;
-  grid-row: 1/4
-
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 3rem calc(50% - 3rem) calc(50% - 3rem);
 }
 
 .grid-container {
@@ -51,30 +100,56 @@ img {
   overflow: scroll;
   display: flex;
   padding: 2rem;
-  // grid-row-start: 1;
+  grid-row: 3 / spread 2;
+}
+
+.grid-half {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+
+  &__content {
+    grid-row: 2;
+    grid-column: 1/ 5;
+  }
 
   &__input {
-    justify-content: flex-start;
-    // grid-row-start: 3;
+    grid-row: 3;
+    grid-column: 2/4;
   }
 }
 
-.inputForm {
+.flex-container-centered {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  grid-column: 2/4;
+  grid-row: 1/4;
 }
 
-.floating-label {
-  // display: flex;
-  // flex-direction: column;
-  grid-template-columns: repeat(3, 1fr);
-  align-items: center;
-  display: grid;
+.form-input-container {
+  margin-top: 0;
+  margin-bottom: auto;
+  height: 100%;
+  padding: 0 6rem 0 6rem;
 }
 
-.form-ctrl {
-  grid-column: 1 /4;
+//      ==================
+//*     === Components ===
+//      ==================
+
+.header-content {
+  display: flex;
+  gap: 2rem;
+  padding: 0.5rem;
+  height: 100%;
+}
+
+.header-item-container {
+  text-align: center;
+  // margin: .5rem;
+  padding: 0 0.5rem 0 0.5rem;
+  border-radius: 10px;
+  background-color: $secondary-background-color;
 }
 
 .error-fallback {
@@ -82,33 +157,53 @@ img {
   align-items: center;
 }
 
-.form-input-container {
-  grid-column: 2 / 4;
-  margin-top: 0;
-  margin-bottom: auto;
-  height: 100%;
+.form-control {
+  @extend %border-style;
+  border: $border-light;
+  color: $text-color;
+  border-right: 0;
+  background-color: $secondary-background-color;
+
+  &:focus {
+    @extend %border-style;
+    border: $border-light;
+    color: $text-color;
+    border-right: 0;
+    background-color: $secondary-background-color-light;
+  }
 }
 
 .form-button {
-  grid-column: 2;
-  margin-top: 5rem;
-}
+  // grid-column: 2;
+  // margin: 3rem 2rem 0 2rem;
+  @extend %border-style;
+  color: $text-color-dark;
+  border: $border-light;
 
-.image-list-container {
-  // display: flex;
-  // grid-column: 1/5;
+  &:hover {
+    @extend %border-style;
+    // color: $text-color-dark;
+    color: rgba($text-color, 0.75);
+    border: $border-light;
+  }
 }
 
 .image-list {
   display: flex;
-  // display: grid;
-// grid-template-columns: repeat(4, 1fr);
-  grid-column: 1/5;
+  gap: 3rem;
+  height: 100%;
+  align-items: center;
+}
+
+.img-thumbnail {
+  @extend %border-style;
+  background-color: $secondary-background-color;
+  border: $border-dark;
 }
 
 .image-item {
-  padding: 3rem;
-  // align-content: center;
-  // display: grid;
-  scale: 50%;
+  min-width: 0;
+  height: 100%;
+  display: flex;
+  justify-content: center;
 }
